# ros_ws

./: baxter.sh  change_publish_rate.txt  limit_velocity.txt
devel/: .catkin  .rosinstall  setup.sh
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyStates.h  CameraSettings.h  CloseCameraResponse.h  DigitalIOState.h  DigitalIOStates.h  EndEffectorCommand.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  OpenCameraRequest.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  UpdateSource.h
devel/lib/baxter_sim_hardware/: baxter_emulator
devel/lib/baxter_sim_io/: baxter_sim_io
devel/lib/baxter_sim_kinematics/: kinematics
devel/lib/pkgconfig/: baxter_core_msgs.pc  baxter_description.pc  baxter_examples.pc  baxter_gazebo.pc  baxter_interface.pc  baxter_maintenance_msgs.pc  baxter_sim_controllers.pc  baxter_sim_examples.pc  baxter_sim_hardware.pc  baxter_sim_io.pc  baxter_sim_kinematics.pc  baxter_tools.pc  gazebo_plugin.pc  rethink_ee_description.pc
install/: .rosinstall
install/include/baxter_core_msgs/: AssemblyState.h  CameraControl.h  CloseCameraRequest.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalOutputCommand.h  EndEffectorProperties.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  (+8 more)
src/: .rosinstall  .rosinstall.bak
src/gazebo_plugin/: CMakeLists.txt
src/gazebo_plugin/launch/: baxter_world_sync.launch  hello.launch
src/gazebo_plugin/src/: step_world_plugin.cpp
src/gazebo_plugin/worlds/: baxter_sync.world  hello.world
(+36 files in other folders)
